2025-01-19T00:38:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12848781856 # 539
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 719 1190 / 724 1195
* notice: next accum: outdated-unq outdated-all / unq all: 720 1191 / 724 1195
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-02] / []

2025-01-12T01:22:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12729229716 # 538
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-12
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 718 1189 / 723 1194
* notice: next accum: outdated-unq outdated-all / unq all: 719 1190 / 724 1195
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-12-29] / [2025-01-11]

2025-01-11T01:15:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12719779974 # 537
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-11
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 717 1188 / 723 1194
* notice: next accum: outdated-unq outdated-all / unq all: 718 1189 / 723 1194
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-28] / []

2025-01-09T01:14:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12682026500 # 535