@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-01-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-01-06T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2025-01-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-01-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
